log
Wed 10 May 2023 09:43:37 PM UTC: 
 tests:  0|4
total_score: 0/70
92dc10a
Wed 10 May 2023 11:24:35 PM UTC: 
 heap.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:33: error: expected expression before ‘Heap’
   38 |   Heap *arreglo = (Heap*)malloc(Heap);
      |                                 ^~~~
heap.c:40:22: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   40 |   arreglo->heapArray = (int*)malloc(3 * sizeof(int));
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
b5ce7ab
Wed 10 May 2023 11:24:54 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:33: error: expected expression before ‘Heap’
   38 |   Heap *arreglo = (Heap*)malloc(Heap);
      |                                 ^~~~
heap.c:40:24: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   40 |   arreglo->heapArray = (int)malloc(3 * sizeof(int));
      |                        ^
heap.c:40:22: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   40 |   arreglo->heapArray = (int)malloc(3 * sizeof(int));
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
35c68d8
Wed 10 May 2023 11:25:29 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:33: error: expected expression before ‘Heap’
   38 |   Heap *arreglo = (Heap*)malloc(Heap);
      |                                 ^~~~
Compilation failed
d4a481b
Wed 10 May 2023 11:26:09 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
2b531ad
Wed 10 May 2023 11:28:42 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:26:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   26 |     return pq->heapArray[0];
      |            ~~~~~~~~~~~~~^~~
Compilation failed
7ad9ae5
Wed 10 May 2023 11:29:02 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
99a4b85
Wed 10 May 2023 11:46:31 PM UTC: 
 heap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:25:1: error: control reaches end of non-void function [-Werror=return-type]
   25 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e2b0eac
Wed 10 May 2023 11:48:56 PM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:29: error: dereferencing ‘void *’ pointer [-Werror]
   23 |   return pq->heapArray->data[0];
      |                             ^
heap.c:23:29: error: void value not ignored as it ought to be
   23 |   return pq->heapArray->data[0];
      |          ~~~~~~~~~~~~~~~~~~~^~~
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a3f6382
Wed 10 May 2023 11:49:07 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
f16ef8e
Wed 10 May 2023 11:49:56 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|2
total_score: 20/70
520b58e
Wed 10 May 2023 11:54:26 PM UTC: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:32:29: error: incompatible types when assigning to type ‘heapElem’ {aka ‘struct nodo’} from type ‘void *’
   32 |   pq->heapArray[pq->size] = data;
      |                             ^~~~
Compilation failed
4a6a7bb
Wed 10 May 2023 11:54:45 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:32:29: error: incompatible types when assigning to type ‘heapElem’ {aka ‘struct nodo’} from type ‘int’
   32 |   pq->heapArray[pq->size] = priority;
      |                             ^~~~~~~~
Compilation failed
388d200
Wed 10 May 2023 11:55:13 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:32:17: error: expected expression before ‘int’
   32 |   pq->heapArray[int(pq->size)] = priority;
      |                 ^~~
Compilation failed
fa17588
Wed 10 May 2023 11:56:10 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:32:29: error: incompatible types when assigning to type ‘heapElem’ {aka ‘struct nodo’} from type ‘void *’
   32 |   pq->heapArray[pq->size] = data;
      |                             ^~~~
Compilation failed
ea15aa0
Wed 10 May 2023 11:56:19 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:32:29: error: dereferencing ‘void *’ pointer [-Werror]
   32 |   pq->heapArray[pq->size] = *data;
      |                             ^~~~~
heap.c:32:27: error: void value not ignored as it ought to be
   32 |   pq->heapArray[pq->size] = *data;
      |                           ^
cc1: all warnings being treated as errors
Compilation failed
ced15b0
Wed 10 May 2023 11:57:11 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:32:22: error: dereferencing ‘void *’ pointer [-Werror]
   32 |   pq->heapArray->data[pq->size] = data;
      |                      ^
heap.c:32:33: error: invalid use of void expression
   32 |   pq->heapArray->data[pq->size] = data;
      |                                 ^
cc1: all warnings being treated as errors
Compilation failed
b813d27
Wed 10 May 2023 11:57:27 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
96a9fa4
Thu 11 May 2023 12:02:31 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:22: error: ‘heapElem’ {aka ‘struct nodo’} has no member named ‘size’
   35 |   while(pq->heapArray->size-1->priority > priority)
      |                      ^~
heap.c:35:30: error: invalid type argument of ‘->’ (have ‘int’)
   35 |   while(pq->heapArray->size-1->priority > priority)
      |                              ^~
Compilation failed
bb0f563
Thu 11 May 2023 12:02:46 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:24: error: expected identifier before ‘(’ token
   35 |   while(pq->heapArray->(size-1)->priority > priority)
      |                        ^
Compilation failed
c1f239b
Thu 11 May 2023 12:03:52 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:32: error: subscripted value is neither array nor pointer nor vector
   35 |   while(pq->heapArray->priority[pq->size-1] > priority)
      |                                ^
Compilation failed
b3456e6
